Fixed alignment

--- a/static/less/app/dashboard.less
+++ b/static/less/app/dashboard.less
@@ -1,7 +1,5 @@
 .dashboard > .content {
   width: 300px;
-  padding-top: 24px;
-  h1 {margin-top: 0;}
   .list {
     margin: 0;
   }
