--- a/static/less/normal.less
+++ b/static/less/normal.less
@@ -19,5 +19,6 @@ a {
 }
 
 h1 {
+  margin-top: 0;
   font-weight: normal;
 }
